# ByteOS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  limine.conf  linker.ld  run-iso.sh
apps/: bytebox  bytebox.c
isodir/boot/: kernel.elf
limine/: limine.c
src/assets/: bg.h  bg_alias.c  font.c  font.h  font_stub.c
src/boot/: entry.S  gdt.S  gdt.c  gdt.h  idt.S  idt.c  limine.h  limine_reqs.c  tss.c
src/compat/: compat.c  panic.c  panic.h  stack_chk.c
src/console/: console.c  console.h
src/drivers/: drivers.c  drivers.h
src/drivers/ata/: ata.c  ata.h
src/drivers/ext/: ext.c  ext.h
src/drivers/fat/: fat.c  fat.h
src/drivers/keyboard/: keyboard.c  keyboard.h
src/drivers/mouse/: mouse.c  mouse.h
src/drivers/usb/: usb.c  usb.h
src/fs/: vfs.c  vfs.h
src/graphics/: font.c  font.h  framebuffer.c  framebuffer.h
src/gui/: mia.c  mia.h  wm.c
src/kernel/: kernel.h  main.c
src/lib/: libc.c  libc.h  stb_image.h  stb_image_impl.c
src/mem/: alloc.c  alloc.h  exceptions.c  paging.c  paging.h
src/multitasking/: context.S  scheduler.c  scheduler.h
src/serial/: serial.c  serial.h
src/shell/: shell.c  shell.h
src/sys/: proc.c
src/syscall/: syscall.c  syscall.h
src/userspace/: enter_user.c  umain.c
src/utils/: log.c  log.h
